<resources>
    <string name="app_name">NairobiGo</string>
    <string name="housecleaner_intro">House cleaner: Rate charged: Ksh 1000/hour</string>
    <string name="house_cleaner">House cleaner</string>
    <string name="book_button">Book</string>
    <string name="nanny_intro">Nanny: Rate charged: Ksh 2500/hour</string>
    <string name="nanny">Nanny</string>
    <string name="plumber_intro">Plumber: Rate charged: Ksh 800/hour</string>
    <string name="plumber">Plumber</string>
    <string name="technician_intro">HVAC Technician: Rate charged: Ksh 3800/hour</string>
    <string name="technician">HVAC Technician</string>
    <string name="electrician_intro">Electrician: Rate charged: Ksh 3000/hour</string>
    <string name="electrician">Electrician</string>
    <string name="painter_intro">Painter: Rate charged: Ksh 1800/hour</string>
    <string name="painter">Painter</string>
    <string name="client_intro">Thanks for choosing NairobiGo! Here are the Contractors available:</string>

        <string name="contractor_opportunity">You have an opportunity for our contractors?</string>
        <string name="date_hint">Date of appointment</string>
        <string name="location_hint">Where are you located?</string>
        <string name="payment_hint">Payment amount proposal</string>
        <string name="hours_hint">How many hours do you need them?</string>
        <string name="submit_button">Submit</string>


</resources>